--- a/css/styles.css
+++ b/css/styles.css
@@ -4,11 +4,79 @@ body, html {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+/* ----------------------- Index ----------------------- */
+
+.index{
+    background: #ECECEC;
+}
+
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 30px;
+  text-decoration: none;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: red;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* ----------------------- End index ----------------------- */
 
 .login{
     background-image: linear-gradient(to left, #7d5cccd4, #fc9873db), url("../img/background2.png");
     background-size: cover;
 }
+
 .jumbotron-img{
     background-image: linear-gradient(to left, #7d5cccd4, #fc9873db), url("../img/settings.png");
     height: 30%;
