--- a/css/styles.css
+++ b/css/styles.css
@@ -10,44 +10,70 @@ body, html {
     background: #ECECEC;
 }
 
+/* --------- Logo --------- */
+
+.logo {
+  width: 10%;
+  height: 20%;
+  background-color: #403E3E;
+  position: fixed;
+  float: left;
+  margin: 0px 250px 25px;
+}
+
+.logo img {
+  object-fit: contain;
+  position: fixed;
+  float: left;
+  max-width:184px;
+  max-height:184px;
+  margin-top: 25px;
+}
+
+/* --------- End Logo --------- */
+
+/* --------- Navigation bar --------- */
+
 .navbar {
   overflow: hidden;
-  background-color: #333;
+  background-color: #ECECEC;
 }
 
 .navbar a {
-  float: left;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 30px;
+  color: black;
+  float: right;
+  font-size: 26px;
+  padding: 14px 100px;
   text-decoration: none;
+  margin: 14px;
 }
 
 .dropdown {
-  float: left;
+  float: right;
   overflow: hidden;
 }
 
 .dropdown .dropbtn {
-  font-size: 16px;
+  font-size: 26px;
   border: none;
   outline: none;
-  color: white;
-  padding: 14px 16px;
+  color: black;
+  padding: 14px 50px;
   background-color: inherit;
   font-family: inherit;
   margin: 0;
+  height: 82px;
 }
 
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: red;
+.navbar a:hover {
+  text-decoration: underline solid #7d5cccd4 4px;
+  text-underline-position: under;
 }
+
 
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -63,14 +89,55 @@ body, html {
 }
 
 .dropdown-content a:hover {
-  background-color: #ddd;
+  text-decoration: underline solid #7d5cccd4 4px;
+  text-underline-position: under;
 }
 
 .dropdown:hover .dropdown-content {
   display: block;
+  background-color: #ECECEC;
 }
 
-/* ----------------------- End index ----------------------- */
+/* --------- End Navigation bar --------- */
+
+/* --------- Header --------- */
+
+.indexHeader{
+    background-image: linear-gradient(to left, #7d5cccd4, #fc9873db), url("../img/bannerIndex.jpg");
+    background-size: cover;
+    background-position: center;
+    width: auto;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1.indexTitle{
+    color: white;
+    text-shadow: 2px 2px black;
+    text-align: center;
+    margin: auto;
+    padding-top: 150px;
+    font-size: 50px;
+}
+
+h2.indexSlogan{
+    font-weight: bold;
+    text-align: center;
+    text-shadow: 1px 2px 0px rgba(153, 130, 246, 0.5);
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: white;
+    vertical-align: middle;
+    width: 570px;
+    border-radius: 25px;
+    margin-bottom: 50px;
+}
+
+/* --------- End Header --------- */
+
+/* ----------------------- End Index ----------------------- */
 
 .login{
     background-image: linear-gradient(to left, #7d5cccd4, #fc9873db), url("../img/background2.png");
