--- a/css/jazzcss.css
+++ b/css/jazzcss.css
@@ -37,6 +37,7 @@ h2.slogan{
 
 section.container{
     margin-top: 60px;
+    overflow: hidden;
     width: auto;
     height: 400px;
     background-color: #9982F6;
@@ -45,7 +46,7 @@ section.container{
 }
 
 article.box1{
-    width: 1100px;
+    width: 100%;
     height: 300px;
     margin: auto;
     margin-right: 0px;
@@ -67,4 +68,45 @@ article.box2{
     padding-right: 300px;
     top:-0.5%;
 }
+
+section.wrapper{
+    margin-top: 80px;
+    margin-bottom: 60px;
+    top:50%;
+    left: 20%;
+    overflow: hidden;
+    width: 1100px;
+    height: 500px;
+    background-color: #ffffff;
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+
+section.container2{
+    display: flex;
+    margin-top: 15px;
+    margin-bottom: 20px;
+    overflow: hidden;
+    width: 97%;
+    height: 95%;
+    background-color: #9982F6;
+    
+    
+}
+
+article.box3{
+    
+    font-weight: bold;
+    width: 40%;
+    height: 241px;
+    margin-left: 60px;
+    margin-top: 60px;
+}
+
+article.box4{
+    margin-top: 75px;
+    margin-left: 40px;
+}
+
 
