--- a/css/styles.css
+++ b/css/styles.css
@@ -18,21 +18,26 @@ body, html {
   background-color: #403E3E;
   position: fixed;
   float: left;
-  margin: 0px 250px 25px;
+  margin: 0% 12%;
 }
 
 .logo img {
   object-fit: contain;
   position: fixed;
   float: left;
-  max-width:184px;
-  max-height:184px;
-  margin-top: 25px;
+  max-width: 16%;
+  max-height:15%;
+  margin-top: 1.5%;
 }
 
 /* --------- End Logo --------- */
 
 /* --------- Navigation bar --------- */
+
+#masthead {
+    width: calc(100vw);
+    position: fixed;
+}
 
 .navbar {
   overflow: hidden;
@@ -43,7 +48,7 @@ body, html {
   color: black;
   float: right;
   font-size: 26px;
-  padding: 14px 100px;
+  padding: 1% 5%;
   text-decoration: none;
   margin: 14px;
 }
@@ -54,15 +59,23 @@ body, html {
 }
 
 .dropdown .dropbtn {
+  width: 100%;
   font-size: 26px;
   border: none;
   outline: none;
   color: black;
-  padding: 14px 50px;
+  padding: 82% 0%;
   background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-  height: 82px;
+}
+
+.dropdown .dropbtn1 {
+  width: 100%;
+  font-size: 26px;
+  border: none;
+  outline: none;
+  color: black;
+  padding: 46% 0%;
+  background-color: inherit;
 }
 
 .navbar a:hover {
@@ -70,19 +83,17 @@ body, html {
   text-underline-position: under;
 }
 
-
 .dropdown-content {
   display: none;
   position: absolute;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
 }
 
 .dropdown-content a {
   float: none;
   color: black;
-  padding: 12px 16px;
+  padding: 14px 16px;
   text-decoration: none;
   display: block;
   text-align: left;
@@ -98,6 +109,11 @@ body, html {
   background-color: #ECECEC;
 }
 
+.shoppingcart img{
+  width: 50px;
+  margin-top: -10px;
+}
+
 /* --------- End Navigation bar --------- */
 
 /* --------- Header --------- */
@@ -107,7 +123,7 @@ body, html {
     background-size: cover;
     background-position: center;
     width: auto;
-    height: 400px;
+    height: 450px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -136,6 +152,69 @@ h2.indexSlogan{
 }
 
 /* --------- End Header --------- */
+
+
+
+/* ------------------- Body ------------------- */
+
+/* --------- Quickbar --------- */
+
+#midsection {
+  background: blue;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.containerBody {
+  background: green;
+  width: 100%;
+  height: 40%;
+  position: absolute;
+}
+
+.quickbar {
+  width: 60%;
+  height: 50%;
+  background-color: red;
+  margin-left: 20%;
+  margin-top: 10;
+}
+
+.backgroundQuickbar1 {
+  background-color: white;
+  width: 20%;
+  height: 30%;
+}
+
+.backgroundQuickbar2 {
+  background-color: white;
+  width: 20%;
+  height: 30%;
+}
+
+.backgroundQuickbar3 {
+  background-color: white;
+  width: 20%;
+  height: 30%;
+}
+
+/* .quickbar1 {
+  width: 20%;
+  height: 20%;
+  font-size: 26px;
+  border: none;
+  outline: none;
+  padding: 43% 0%;
+  background-color: #7d5cccd4;
+} */
+
+
+
+
+/* --------- End Quickbar --------- */
+
+/* ------------------- End Body ------------------- */
 
 /* ----------------------- End Index ----------------------- */
 
