--- a/css/jazzcss.css
+++ b/css/jazzcss.css
@@ -1,6 +1,7 @@
 body{
     background-color: #ECECEC;
     margin: 0 auto;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
@@ -12,6 +13,10 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-style: solid;
+    border-width: 0px;
+    border-bottom-width: 10px;
+    border-color: #9982F6;
 }
 
 h1.eventhead{
@@ -147,14 +152,59 @@ button.artistinfo{
     font-size: 16px;
     font-weight: bold;
     border-color: transparent;
-  border: none;
-  
-  padding: 15px 32px;
-
-  
-
-  cursor: pointer;
+    border: none;
+    padding: 15px 32px;
+    cursor: pointer;
 }
+
+section.agenda{
+    background-color: #9982F6;
+    width: 1000px;
+    height: 1077px;
+    display: flex;
+    border-style: solid;
+    border-width: 20px;
+    border-top-width: 80px;
+    border-color: white;
+    margin: auto;
+    margin-top: 60px;
+    flex-flow: column;
+}
+
+article.title-wrapper{
+    display: flex;
+    flex-flow: row;
+}
+
+.agenda h1{
+    margin-top: -50px;;
+}
+
+.agenda button{
+    border-radius: 10px;
+    width: 120px;
+    height: 30px;
+    border-color: transparent;
+    background-color: #9982F6;
+    margin-top: -55px;
+    margin-left: 300px;
+    border: none;
+}
+
+.agenda h2{
+    margin: 30px;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+.agenda p{
+    margin: 0px;
+    margin-bottom: 10px;
+    margin-left: 30px;
+}
+
+
 
 
 
