--- a/css/footercss.css
+++ b/css/footercss.css
@@ -1,15 +1,19 @@
 body{
     margin: auto;
+    position: relative;
+    min-height: 100vh;
 }
 
-section.wrapper{
+section.wrapperfooter{
     width: 100%;
     height: 280px;
     background-color: #9982F6;
     position: absolute;
-    bottom: 0%;
+    bottom: 0;
     display: flex;
-    justify-content: center;
+    justify-content: center; 
+
+    
 }
 
 article.copyright{
@@ -20,7 +24,7 @@ article.copyright{
     position: absolute;
 }
 
-img.logo{
+img.logofooter{
     width: 8%;
     height: auto;
     position: absolute;
@@ -28,7 +32,7 @@ img.logo{
     top: 10%;
 }
 
-article.line{
+article.linefooter{
     width: 90%;
     height: 1px;
     position: absolute;
