--- a/css/jazzcss.css
+++ b/css/jazzcss.css
@@ -2,21 +2,25 @@ body{
     background-color: #ECECEC;
     margin: 0 auto;
     font-family: Arial, Helvetica, sans-serif;
+    position: relative;
+    min-height: 100vh;
 }
 
+/* Header section */
 
 .header{
     background-image: linear-gradient(to left, #7d5cccd4, #fc9873db), url("../img/jazzheader.png");
     background-size: cover;
     width: auto;
-    height: 250px;
+    height: 400px;
     display: flex;
     flex-direction: column;
     align-items: center;
     border-style: solid;
     border-width: 0px;
-    border-bottom-width: 10px;
+    border-bottom-width: 5px;
     border-color: #9982F6;
+    
 }
 
 h1.eventhead{
@@ -24,6 +28,7 @@ h1.eventhead{
     text-shadow: 2px 2px black;
     text-align: center;
     margin: auto;
+    margin-bottom: 20px;
     padding-top: 80px;
     font-size: 50px;
 }
@@ -39,6 +44,10 @@ h2.slogan{
     vertical-align: middle;
     border-radius: 28px;
 }
+/* end header */
+
+/* body section */
+/* buy tickets section */
 
 section.container{
     margin-top: 60px;
@@ -75,10 +84,46 @@ article.box2{
     display: flex;
 }
 
+input.buyjazz{
+    position: absolute;
+    justify-content: right;
+    margin-left: 60px;
+    width: 120px;
+    height: 40px;
+    top: 75%;
+    left: 60%;
+    background-color: transparent;
+    padding: 10px 10px;
+    border: none;
+    color: black;
+    font-size: 16px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.arrow {
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+    margin-bottom: 1px;
+    position: absolute;
+    top: 80%;
+    left: 68.5%;
+  }
+
+  .right {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+  }
+
+/* end of buy tickets section */
+/* artist info section */
+
 section.wrapper{
     margin-top: 80px;
-    margin-bottom: 60px;
-    top:50%;
+    margin-bottom: 80px;
+    top:15%;
     left: 20%;
     overflow: hidden;
     width: 1100px;
@@ -112,38 +157,9 @@ article.box4{
     margin-left: 40px;
 }
 
-input.buyjazz{
-    position: absolute;
-    justify-content: right;
-    margin-left: 60px;
-    width: 120px;
-    height: 40px;
-    top: 75%;
-    left: 60%;
-    background-color: transparent;
-    padding: 10px 10px;
-    border: none;
-    color: black;
-    font-size: 16px;
-    cursor: pointer;
-    font-weight: bold;
-}
 
-.arrow {
-    border: solid black;
-    border-width: 0 3px 3px 0;
-    display: inline-block;
-    padding: 3px;
-    margin-bottom: 1px;
-    position: absolute;
-    top: 80%;
-    left: 68.5%;
-  }
   
-  .right {
-    transform: rotate(-45deg);
-    -webkit-transform: rotate(-45deg);
-  }
+  
 
 input.artistinfo{
     background-color: transparent;
@@ -159,6 +175,94 @@ input.artistinfo{
     padding: 15px 32px;
     cursor: pointer;
 }
+
+/* end of artist info section */
+
+/* footer section */
+
+
+section.wrapperfooter{
+    width: 100%;
+    height: 280px;
+    background-color: #9982F6;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    clear: both;
+    position: relative;
+    margin-top: 100px;
+}
+
+article.copyright{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    font-weight: bold;
+    bottom: 0%;
+    position: absolute;
+}
+
+img.logofooter{
+    width: 8%;
+    height: auto;
+    position: absolute;
+    left: 5%;
+    top: 10%;
+}
+
+article.linefooter{
+    width: 90%;
+    height: 1px;
+    position: absolute;
+    background: rgb(0, 0, 0);
+    top: 60%;
+}
+
+.footermenu{
+    position: absolute;
+    top: 20%;
+    left: 20%;
+    display: flex;
+    flex-flow: row;
+}
+
+.wrapperfooter h3{
+    position: absolute;
+    top: 3%;
+    left: 20%;
+    color: white;
+    text-shadow: 2px 2px 2px black;
+}
+
+.footermenu ul{
+    width: 30%;
+    color: white;
+    font-weight: bold;
+    text-shadow: 2px 2px 2px black;
+}
+
+.footermenu ul.section1{
+    margin-right: 20px;
+}
+
+.footermenu ul.section2{
+    margin-right: 20px;
+}
+
+.footermenu ul{
+    margin: 0;
+    padding: 0;
+}
+
+.footermenu li{
+    list-style-type: none;
+}
+
+
+
+
+/* end of footer section */
+
+/* artist agenda page  */
 
 section.agenda{
     background-color: #9982F6;
@@ -206,6 +310,7 @@ article.title-wrapper{
     margin-bottom: 10px;
     margin-left: 30px;
 }
+
 
 
 
