--- a/css/jazzcss.css
+++ b/css/jazzcss.css
@@ -201,6 +201,12 @@ article.copyright{
     position: absolute;
 }
 
+.copyrightlogos img{ 
+    margin-left: 7px; 
+    width: 19%;
+    height: auto;
+}
+
 img.logofooter{
     width: 8%;
     height: auto;
@@ -214,7 +220,7 @@ article.linefooter{
     height: 1px;
     position: absolute;
     background: rgb(0, 0, 0);
-    top: 60%;
+    top: 65%;
 }
 
 .footermenu{
@@ -225,12 +231,18 @@ article.linefooter{
     flex-flow: row;
 }
 
-.wrapperfooter h3{
+.menutag{
     position: absolute;
     top: 3%;
     left: 20%;
     color: white;
     text-shadow: 2px 2px 2px black;
+}
+
+.wrapperfooter a{
+    color: white;
+    text-shadow: 2px 2px 2px black;
+    text-decoration: none;
 }
 
 .footermenu ul{
@@ -255,8 +267,92 @@ article.linefooter{
 
 .footermenu li{
     list-style-type: none;
+    margin-bottom: 10px;
 }
 
+.latestposttag{
+    position: absolute;
+    top: 3%;
+    left: 45%;
+    color: white;
+    text-shadow: 2px 2px 2px black;
+}
+
+.latestposts{
+    position: absolute;
+    top: 20%;
+    left: 45%;
+    width: 400px;
+    font-weight: bold;
+    font-size: 14px;
+    color: white;
+    text-shadow: 2px 2px 2px black;
+}
+
+.latestposts .insta img{
+    height: auto;
+    float: left;
+    margin-right: 13px;
+}
+
+.latestposts p{
+    margin-left: 15px;
+    display: block;
+    margin: 2px 0 0 0;
+}
+
+.facebook{
+    position: absolute;
+    top: 130%;
+    left: 0%;
+}
+
+.facebook p{
+    position: absolute;
+    width: 1000%;
+    top: 0%;
+    left: 150%;
+    float: right;
+    color: white;
+    text-shadow: 2px 2px 2px black;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.stayconnectedtag{
+    position: absolute;
+    top: 3%;
+    left: 70%;
+    color: white;
+    text-shadow: 2px 2px 2px black;
+}
+
+.stayconnected{
+    position: absolute;
+    width: 11%;
+    top: 20%;
+    left: 70%;
+}
+
+.stayconnected .email{
+    outline: none;
+    border: none;
+    background-color: #FFFFFF;
+    width: 100%;
+    height: 20px;
+}
+
+.stayconnected .signup{
+    float: right;
+    margin-top: 20px;
+    background-color: #CD5F47;
+    border: none;
+    width: 50%;
+    height: 30px;
+    font-weight: bold;
+    font-size: 16px;
+    color: white;
+}
 
 
 
