--- a/css/styles.css
+++ b/css/styles.css
@@ -541,11 +541,11 @@ form.form1 {
     padding-top: 15px;
 }
 
-a {
+/* a {
     text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
     color: #E1BEE7;
     text-decoration: none
-}
+} */
 
 @media (max-width: 600px) {
     .main {
