--- a/css/styles.css
+++ b/css/styles.css
@@ -4,11 +4,343 @@ body, html {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+/* ----------------------- Index ----------------------- */
+
+.index{
+    background: #ECECEC;
+}
+
+/* --------- Logo --------- */
+
+.logo {
+  width: 10%;
+  height: 20%;
+  background-color: #403E3E;
+  position: fixed;
+  float: left;
+  margin: 0% 12%;
+}
+
+.logo img {
+  object-fit: contain;
+  position: fixed;
+  width: 16%;
+  height: 15%;
+  margin-top: 1.5%;
+  margin-left: -3%;
+}
+
+/* --------- End Logo --------- */
+
+/* --------- Navigation bar --------- */
+
+#masthead {
+    width: calc(100vw);
+    top: 0;
+    left: 0;
+    position: fixed;
+    z-index: 500;
+}
+
+.navbar {
+  overflow: hidden;
+  background-color: #ECECEC;
+}
+
+.navbar a {
+  color: black;
+  float: right;
+  font-size: 26px;
+  padding: 1% 5%;
+  text-decoration: none;
+  margin: 0.9%;
+}
+
+.dropdown {
+  float: right;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  width: 100%;
+  font-size: 26px;
+  border: none;
+  outline: none;
+  color: black;
+  margin-top: 63%;
+  background-color: inherit;
+}
+
+.dropdown .dropbtn1 {
+  width: 100%;
+  font-size: 26px;
+  border: none;
+  outline: none;
+  color: black;
+  margin-top: 39%;
+  background-color: inherit;
+}
+
+.navbar a:hover {
+  text-decoration: underline solid #7d5cccd4 4px;
+  text-underline-position: under;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  width: 9%;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 1% 5%;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  text-decoration: underline solid #7d5cccd4 4px;
+  text-underline-position: under;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+  background-color: #ECECEC;
+}
+
+.shoppingcart img{
+  width: 45%;
+  margin-top: -8%;
+}
+
+/* --------- End Navigation bar --------- */
+
+/* --------- Header --------- */
+
+.indexHeader{
+    background-image: linear-gradient(to left, #7d5cccd4, #fc9873db), url("../img/Food-Banner.png");
+    background-size: cover;
+    background-position: center;
+    width: auto;
+    height: 45%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1.indexTitle{
+    color: white;
+    text-shadow: 3px 3px black;
+    text-align: center;
+    margin: auto;
+    padding-top: 10%;
+    font-size: 50px;
+}
+
+h2.indexSlogan{
+    font-weight: bold;
+    text-align: center;
+    text-shadow: 1px 2px 0px rgba(153, 130, 246, 0.5);
+    padding-top: 1%;
+    padding-bottom: 1%;
+    background-color: white;
+    vertical-align: middle;
+    width: 30%;
+    border-radius: 25px;
+    margin-bottom: 2.5%;
+}
+
+/* --------- End Header --------- */
+
+/* ------------------- Body ------------------- */
+
+#midsection {
+  /* background: blue; */
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.containerBody {
+  /* background: green; */
+  width: 100%;
+  height: 230%;
+  position: absolute;
+}
+
+/* ------------------- End Body ------------------- */
+
+/* --------- Quickbar --------- */
+
+.quickbar {
+  width: 85%;
+  height: 10%;
+  /* background-color: red; */
+  margin-left: 7.5%;
+}
+
+.backgroundQuickbar1 {
+  position: absolute;
+  background-color: white;
+  width: 23%;
+  height: 7%;
+  margin-top: 2%;
+}
+
+.backgroundQuickbar2 {
+  position: absolute;
+  background-color: white;
+  width: 23%;
+  height: 7%;
+  margin-top: 2%;
+  margin-left: 30.5%;
+}
+
+.backgroundQuickbar3 {
+  position: absolute;
+  background-color: white;
+  width: 23%;
+  height: 7%;
+  margin-top: 2%;
+  margin-left: 61.8%;
+}
+
+.quickbarButton {
+  width: 92%;
+  height: 84%;
+  margin-top: 2.8%;
+  margin-left: 3.9%;
+  border: none;
+  outline: none;
+  background-color: #7d5cccd4;
+}
+
+.quickbarButton img {
+  float: left;
+  margin-top: 5%;
+  margin-left: 4%;
+  width: 15%;
+  height: 50%;
+}
+
+.quickbarButton p {
+  font-weight: bold;
+  font-size: 34px;
+  margin-right: 40%;
+  width: 70%;
+}
+
+/* --------- End Quickbar --------- */
+
+/* --------- Events --------- */
+
+.hoverEvents {
+  width: 85%;
+  height: 23%;
+  /* background-color: yellow; */
+  margin-left: 7.5%;
+}
+
+.backgroundEvent1 {
+  position: absolute;
+  background-color: white;
+  width: 23%;
+  height: 20%;
+  margin-top: 1%;
+}
+
+.backgroundEvent2 {
+  position: absolute;
+  background-color: white;
+  width: 23%;
+  height: 20%;
+  margin-top: 1%;
+  margin-left: 30.5%;
+}
+
+.backgroundEvent3 {
+  position: absolute;
+  background-color: white;
+  width: 23%;
+  height: 20%;
+  margin-top: 1%;
+  margin-left: 61.8%;
+}
+
+.imageZoom {
+  position: relative;
+  overflow: hidden;
+  width: 92%;
+  height: 92%;
+  margin-top: 2.8%;
+  margin-left: 3.9%;
+  border: none;
+  outline: none;
+}
+
+.imageZoom img {
+  transition: all 0.3s;
+  display: block;
+  width: 100%;
+  height: 100%;
+  transform: scale(1);
+}
+
+.imageZoom:hover img {
+  transform: scale(1.1);
+}
+
+.bottom-left {
+  position: absolute;
+  bottom: 3%;
+  left: 16px;
+  color: white;
+  font-size: 26px;
+  text-shadow: 2px 2px black;
+}
+
+/* --------- End Events --------- */
+
+/* --------- Social Media Feed --------- */
+
+.socialmedia {
+  width: 100%;
+  height: 61%;
+  /* background-color: pink; */
+  margin-top: -1.6%;
+}
+
+.socialmedia p {
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.socialmedia img {
+  width: 99%;
+}
+
+/* --------- Social Media Feed End --------- */
+
+/* --------- Partners --------- */
+
+
+
+
+/* --------- Partners End --------- */
+
+
+/* ----------------------- End Index ----------------------- */
 
 .login{
     background-image: linear-gradient(to left, #7d5cccd4, #fc9873db), url("../img/background2.png");
     background-size: cover;
 }
+
 .jumbotron-img{
     background-image: linear-gradient(to left, #7d5cccd4, #fc9873db), url("../img/settings.png");
     height: 30%;
@@ -147,6 +479,7 @@ body, html {
     position:relative;
     top:1px;
 }
+
 /* Login Screen */
 .main {
     background-color: #FFFFFF;
@@ -250,115 +583,51 @@ a {
     }
 }
 
-/* --------- Navigation bar --------- */
+/* --------- Food Page --------- */
 
 .Restaurants1
 {
-	width: 45%;
+	width: 35%;
+    height: 20%;
 	float: left;	
-	margin: 10px;
-	background-color : #8899AB;
+	margin: 2%;
+	background-color : #9982F6;
 	font-size: 20px;
 	text-align: left;
 	list-style-type: none;
+    border: 20%;
+    border-style: solid;
+    border-color: black;
+    ;
 }
 
 .Restaurants2
 {
-	width: 45%;
+	width: 35%;
+    height: 20%;
 	float: right;
-	margin: 10px;
-	background-color : #8899AB;
+	margin: 2%;
+    margin-right: 10%;
+	background-color : #9982F6;
 	font-size: 20px;
 	text-align: left;
 	list-style-type: none;
+    border: 20%;
+    border-style: solid;
+    border-color: black;
+    ;
 }
 
-
-/* --------- Navigation bar --------- */
-
-#masthead {
-    width: calc(100vw);
-    top: 0;
-    left: 0;
-    position: fixed;
-    z-index: 500;
+.restaurantfoto1
+{
+    float: right;
+    margin: 5%;
+    clear: right;
 }
-
-.navbar {
-  overflow: hidden;
-  background-color: #ECECEC;
+.restaurantfoto2
+{
+    float: left;
+    margin: 5%;
+    clear: left;
 }
-
-.navbar a {
-  color: black;
-  float: right;
-  font-size: 26px;
-  padding: 1% 5%;
-  text-decoration: none;
-  margin: 0.9%;
-}
-
-.dropdown {
-  float: right;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn {
-  width: 100%;
-  font-size: 26px;
-  border: none;
-  outline: none;
-  color: black;
-  margin-top: 63%;
-  background-color: inherit;
-}
-
-.dropdown .dropbtn1 {
-  width: 100%;
-  font-size: 26px;
-  border: none;
-  outline: none;
-  color: black;
-  margin-top: 39%;
-  background-color: inherit;
-}
-
-.navbar a:hover {
-  text-decoration: underline solid #7d5cccd4 4px;
-  text-underline-position: under;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  width: 9%;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 1% 5%;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {
-  text-decoration: underline solid #7d5cccd4 4px;
-  text-underline-position: under;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-  background-color: #ECECEC;
-}
-
-.shoppingcart img{
-  width: 45%;
-  margin-top: -8%;
-}
-
-/* --------- End Navigation bar --------- */
-
+/* --------- End Food page --------- */
