--- a/css/styles.css
+++ b/css/styles.css
@@ -638,12 +638,62 @@ h4.RestaurantInfoText
   font-weight: bold;
 }
 
+.btnReserveren
+{
+  margin-left: 20%;
+  width: 30%;
+  background-color: white;
+  border: 1px solid rgb(122, 122, 122);
+  margin-right: 1%;
+}
+.btnReserveren:hover
+{
+  background-color: rgb(199, 199, 199);;
+}
+.btnMeerinfo
+{
+  background-color: white;
+  width: 30%;
+  border: 1px solid rgb(122, 122, 122);
+}
+
+.btnMeerinfo:hover
+{
+  background-color: rgb(199, 199, 199);;
+}
+
 @media (max-width: 768px)
 {
   .Restaurants
   {
       flex-direction: column;
   }
+
+  h1.Restaurantnaam
+  {
+    width: 100%;
+  }
+
+  .RestaurantInfo
+  {
+    text-align: left;
+    width: 78%;
+    padding-left: 6%;
+    padding-right: 6%;
+    font-size: 15px;
+  }
+
+  .btnReserveren
+{
+
+  background-color: white;
+  width: 50%;
+}
+.btnMeerinfo
+{
+  background-color: white;
+  width: 50%;
+}
 }
 
 .filterBar
