--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ body, html {
     background-size: cover;
     padding-top: 7em;
 }
+/* header */
 .jumbotron-img{
     background-image: linear-gradient(to left, #7d5cccd4, #fc9873db), url("../img/settings.png");
     height: 30%;
@@ -23,6 +24,7 @@ body, html {
     background-size: cover;
     position: relative;
 }
+/* dashboard */
 .dashboard-txt{
     text-align: center;
     position: absolute;
@@ -129,7 +131,7 @@ body, html {
     display: table;
     clear: both;
 }
-
+/* button */
 .GoBackButton {
     background-color:#9982f6;
     border-radius:5px;
@@ -253,6 +255,25 @@ form.form1 {
     font-family: 'Ubuntu', sans-serif;
     padding: 0px;
     margin: 0px;
+}
+
+.edit-icon{
+    width: 3%;
+    margin-left: 30%;
+}
+/* overlay text */
+#overlay {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 2;
+    cursor: pointer;
 }
 
 @media (max-width: 600px) {
