--- a/css/jazzcss.css
+++ b/css/jazzcss.css
@@ -360,10 +360,19 @@ article.linefooter{
 
 /* artist agenda page  */
 
+input[type=submit]{
+    outline: none;
+}
+
+.title-wrapper input[type=submit]:hover{
+    background-color: #6A59AB;
+}
+
+
 section.agenda{
     background-color: #9982F6;
     width: 1000px;
-    height: 1077px;
+    height: 900px;
     display: flex;
     border-style: solid;
     border-width: 20px;
@@ -379,19 +388,39 @@ article.title-wrapper{
     flex-flow: row;
 }
 
-.agenda h1{
-    margin-top: -50px;;
+.title-wrapper h1{
+    font-weight: normal;
+    font-size: 32px;
 }
 
-.agenda button{
+.info-wrapper img{
+    position: absolute;
+    width: 40%;
+    height: auto;
+    top: 82%;
+    left: 41%;
+}
+
+.agenda h1{
+    margin-top: -50px;
+    position: absolute;
+}
+
+.agenda input[type=submit]{
     border-radius: 10px;
     width: 120px;
     height: 30px;
     border-color: transparent;
     background-color: #9982F6;
-    margin-top: -55px;
-    margin-left: 300px;
+    margin-left: 10px;
+    margin-top: -50px;
     border: none;
+}
+
+section.day-buttons{
+    position: absolute;
+    top: 70%;
+    margin-left: 468px;
 }
 
 .agenda h2{
@@ -407,7 +436,73 @@ article.title-wrapper{
     margin-left: 30px;
 }
 
+/* -----   end of jazz agenda page ------*/
 
+/* ---- start of haarlem info page ----- */
+
+.haarleminfo-header{
+    background-image: linear-gradient(to left, #7d5cccd4, #fc9873db), url("../img/haarleminfo.png");
+    background-size: cover;
+    width: auto;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-style: solid;
+    border-width: 0px;
+    border-bottom-width: 5px;
+    border-color: #9982F6;
+}
+
+.haarleminfo-header h1{
+    margin-bottom: 100px;
+    margin-left: -3%;
+    
+    margin-right: 5px;
+}
+
+.haarleminfo-container{
+    margin-left: 4%;
+    margin-top: 2%;
+}
+
+.haarleminfo-container h2{
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.haarleminfo-container p{
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.haarleminfo-container p{
+    margin-bottom: 30px;
+}
+
+section.haarleminfo-container{
+    border-style: solid;
+    border-width: 15px;
+    border-color: white;
+    /* border-radius: 15px; */
+    background-color: #7d5cccd4;
+    width: 60%;
+}
+
+img.haarleminfopic1{
+    width: 40%;
+    height: auto;
+    margin-left: 100px;
+    margin-top: -15px;
+}
+
+img.haarleminfopic2{
+    width: 30%;
+    height: auto;
+    position: absolute;
+    top: 103%;
+    left: 50%;
+}
 
 
 
