--- a/css/styles.css
+++ b/css/styles.css
@@ -244,7 +244,7 @@ form.form1 {
 .dashboardButtonText {
     text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
     color: black;
-    text-decoration: none
+    font-size: 160%;
 }
 .validation{ !important;
     text-align: center;
