--- a/css/styles.css
+++ b/css/styles.css
@@ -403,4 +403,181 @@ h2.indexSlogan{
 
 /* --------- Partners End --------- */
 
+/* --------- Footer --------- */
+
+
+section.wrapperfooter{
+    width: 100%;
+    height: 280px;
+    background-color: #9982F6;
+    display: flex;
+    justify-content: center;
+    clear: both;
+    position: absolute;
+    margin-top: 100px;
+}
+
+article.copyright{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    font-weight: bold;
+    bottom: 0%;
+    position: absolute;
+}
+
+.copyrightlogos img{
+    margin-left: 7px;
+    width: 19%;
+    height: auto;
+}
+
+img.logofooter{
+    width: 8%;
+    height: auto;
+    position: absolute;
+    left: 5%;
+    top: 10%;
+}
+
+article.linefooter{
+    width: 90%;
+    height: 1px;
+    position: absolute;
+    background: rgb(0, 0, 0);
+    top: 65%;
+}
+
+.footermenu{
+    position: absolute;
+    top: 20%;
+    left: 20%;
+    display: flex;
+    flex-flow: row;
+}
+
+.menutag{
+    position: absolute;
+    top: 3%;
+    left: 20%;
+    color: white;
+    text-shadow: 2px 2px 2px black;
+}
+
+.wrapperfooter a{
+    color: white;
+    text-shadow: 2px 2px 2px black;
+    text-decoration: none;
+}
+
+.footermenu ul{
+    width: 30%;
+    color: white;
+    font-weight: bold;
+    text-shadow: 2px 2px 2px black;
+}
+
+.footermenu ul.section1{
+    margin-right: 20px;
+}
+
+.footermenu ul.section2{
+    margin-right: 20px;
+}
+
+.footermenu ul{
+    margin: 0;
+    padding: 0;
+}
+
+.footermenu li{
+    list-style-type: none;
+    margin-bottom: 10px;
+}
+
+.latestposttag{
+    position: absolute;
+    top: 3%;
+    left: 45%;
+    color: white;
+    text-shadow: 2px 2px 2px black;
+}
+
+.latestposts{
+    position: absolute;
+    top: 20%;
+    left: 45%;
+    width: 400px;
+    font-weight: bold;
+    font-size: 14px;
+    color: white;
+    text-shadow: 2px 2px 2px black;
+}
+
+.latestposts .insta img{
+    height: auto;
+    float: left;
+    margin-right: 13px;
+}
+
+.latestposts p{
+    margin-left: 15px;
+    display: block;
+    margin: 2px 0 0 0;
+}
+
+.facebook{
+    position: absolute;
+    top: 130%;
+    left: 0%;
+}
+
+.facebook p{
+    position: absolute;
+    width: 1000%;
+    top: 0%;
+    left: 150%;
+    float: right;
+    color: white;
+    text-shadow: 2px 2px 2px black;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.stayconnectedtag{
+    position: absolute;
+    top: 3%;
+    left: 70%;
+    color: white;
+    text-shadow: 2px 2px 2px black;
+}
+
+.stayconnected{
+    position: absolute;
+    width: 11%;
+    top: 20%;
+    left: 70%;
+}
+
+.stayconnected .email{
+    outline: none;
+    border: none;
+    background-color: #FFFFFF;
+    width: 100%;
+    height: 20px;
+}
+
+.stayconnected .signup{
+    float: right;
+    margin-top: 20px;
+    background-color: #CD5F47;
+    border: none;
+    width: 50%;
+    height: 30px;
+    font-weight: bold;
+    font-size: 16px;
+    color: white;
+}
+
+/* --------- Footer End --------- */
+
 /* ----------------------- Index End ----------------------- */
